--- a/src/app/landing2/contact/contact.component.html
+++ b/src/app/landing2/contact/contact.component.html
@@ -16,7 +16,7 @@
         </div>
         <div class="info-details">
           <h3>Email Us</h3>
-          <p>support&#64;suhrt.com</p>
+          <p>support&#64;KaresInvestments.com</p>
         </div>
       </div>
 
